--- a/CandyStore/en.lproj/ShopItemDetailPurchaseCell.xib
+++ b/CandyStore/en.lproj/ShopItemDetailPurchaseCell.xib
@@ -66,8 +66,8 @@
 							</object>
 							<object class="IBUILabel" id="121567092">
 								<reference key="NSNextResponder" ref="564601356"/>
-								<int key="NSvFlags">290</int>
-								<string key="NSFrame">{{69, 9}, {166, 21}}</string>
+								<int key="NSvFlags">298</int>
+								<string key="NSFrame">{{69, 21}, {154, 21}}</string>
 								<reference key="NSSuperview" ref="564601356"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="148534481"/>
@@ -96,42 +96,13 @@
 								<int key="IBUIBaselineAdjustment">1</int>
 								<float key="IBUIMinimumFontSize">10</float>
 							</object>
-							<object class="IBUILabel" id="627925323">
+							<object class="IBUIButton" id="148534481">
 								<reference key="NSNextResponder" ref="564601356"/>
-								<int key="NSvFlags">274</int>
-								<string key="NSFrame">{{69, 34}, {231, 21}}</string>
+								<int key="NSvFlags">297</int>
+								<string key="NSFrame">{{223, 21}, {80, 25}}</string>
 								<reference key="NSSuperview" ref="564601356"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView"/>
-								<string key="NSReuseIdentifierKey">_NS:311</string>
-								<bool key="IBUIOpaque">NO</bool>
-								<bool key="IBUIClipsSubviews">YES</bool>
-								<int key="IBUIContentMode">7</int>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<string key="IBUIText">Label</string>
-								<object class="NSFont" key="IBUIFont">
-									<string key="NSName">Helvetica</string>
-									<double key="NSSize">16</double>
-									<int key="NSfFlags">16</int>
-								</object>
-								<object class="NSColor" key="IBUITextColor">
-									<int key="NSColorSpace">3</int>
-									<bytes key="NSWhite">MC4zMzMzMzMzMzMzAA</bytes>
-								</object>
-								<nil key="IBUIHighlightedColor"/>
-								<reference key="IBUIShadowColor" ref="920299214"/>
-								<string key="IBUIShadowOffset">{0, 1}</string>
-								<int key="IBUIBaselineAdjustment">1</int>
-								<float key="IBUIMinimumFontSize">10</float>
-							</object>
-							<object class="IBUIButton" id="148534481">
-								<reference key="NSNextResponder" ref="564601356"/>
-								<int key="NSvFlags">289</int>
-								<string key="NSFrame">{{223, 9}, {80, 25}}</string>
-								<reference key="NSSuperview" ref="564601356"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="627925323"/>
 								<string key="NSReuseIdentifierKey">_NS:222</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">1</int>
@@ -180,7 +151,7 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 				<int key="IBUISeparatorStyle">1</int>
 				<reference key="IBUIContentView" ref="564601356"/>
-				<string key="IBUIReuseIdentifier">shopItemCell</string>
+				<string key="IBUIReuseIdentifier">shopItemDetailPurchaseCell</string>
 			</object>
 		</object>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
@@ -188,19 +159,27 @@
 				<bool key="EncodedWithXMLCoder">YES</bool>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">shopItemCell</string>
-						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="418060019"/>
-					</object>
-					<int key="connectionID">9</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">buyButton</string>
 						<reference key="source" ref="418060019"/>
 						<reference key="destination" ref="148534481"/>
 					</object>
-					<int key="connectionID">10</int>
+					<int key="connectionID">13</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">iconView</string>
+						<reference key="source" ref="418060019"/>
+						<reference key="destination" ref="670107398"/>
+					</object>
+					<int key="connectionID">14</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">titleLabel</string>
+						<reference key="source" ref="418060019"/>
+						<reference key="destination" ref="121567092"/>
+					</object>
+					<int key="connectionID">15</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -209,7 +188,15 @@
 						<reference key="destination" ref="418060019"/>
 						<int key="IBEventType">7</int>
 					</object>
-					<int key="connectionID">11</int>
+					<int key="connectionID">16</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">purchaseCell</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="418060019"/>
+					</object>
+					<int key="connectionID">17</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -239,11 +226,9 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<reference ref="670107398"/>
 							<reference ref="121567092"/>
-							<reference ref="627925323"/>
 							<reference ref="148534481"/>
 						</object>
 						<reference key="parent" ref="0"/>
-						<string key="objectName">Shop Item Cell</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">4</int>
@@ -253,11 +238,6 @@
 					<object class="IBObjectRecord">
 						<int key="objectID">5</int>
 						<reference key="object" ref="121567092"/>
-						<reference key="parent" ref="418060019"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">6</int>
-						<reference key="object" ref="627925323"/>
 						<reference key="parent" ref="418060019"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -279,19 +259,17 @@
 					<string>3.IBPluginDependency</string>
 					<string>4.IBPluginDependency</string>
 					<string>5.IBPluginDependency</string>
-					<string>6.IBPluginDependency</string>
 					<string>8.CustomClassName</string>
 					<string>8.IBPluginDependency</string>
 					<string>8.IBUIButtonInspectorSelectedStateConfigurationMetadataKey</string>
 				</object>
 				<object class="NSMutableArray" key="dict.values">
 					<bool key="EncodedWithXMLCoder">YES</bool>
-					<string>CandyShopViewController</string>
+					<string>ShopItemDetailViewController</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>UIResponder</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-					<string>ShopItemCell</string>
-					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>ShopItemDetailPurchaseCell</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -312,7 +290,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">12</int>
+			<int key="maxID">17</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -326,34 +304,7 @@
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
-					<string key="className">CandyShopViewController</string>
-					<string key="superclassName">RefreshingTableViewController</string>
-					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">shopItemCell</string>
-						<string key="NS.object.0">ShopItemCell</string>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<string key="NS.key.0">shopItemCell</string>
-						<object class="IBToOneOutletInfo" key="NS.object.0">
-							<string key="name">shopItemCell</string>
-							<string key="candidateClassName">ShopItemCell</string>
-						</object>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/CandyShopViewController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">RefreshingTableViewController</string>
-					<string key="superclassName">UITableViewController</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/RefreshingTableViewController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">ShopItemCell</string>
+					<string key="className">ShopItemDetailPurchaseCell</string>
 					<string key="superclassName">UITableViewCell</string>
 					<object class="NSMutableDictionary" key="outlets">
 						<bool key="EncodedWithXMLCoder">YES</bool>
@@ -361,14 +312,12 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>buyButton</string>
 							<string>iconView</string>
-							<string>subTitleLabel</string>
 							<string>titleLabel</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>BuyButton</string>
 							<string>UIImageView</string>
-							<string>UILabel</string>
 							<string>UILabel</string>
 						</object>
 					</object>
@@ -378,7 +327,6 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>buyButton</string>
 							<string>iconView</string>
-							<string>subTitleLabel</string>
 							<string>titleLabel</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
@@ -392,10 +340,6 @@
 								<string key="candidateClassName">UIImageView</string>
 							</object>
 							<object class="IBToOneOutletInfo">
-								<string key="name">subTitleLabel</string>
-								<string key="candidateClassName">UILabel</string>
-							</object>
-							<object class="IBToOneOutletInfo">
 								<string key="name">titleLabel</string>
 								<string key="candidateClassName">UILabel</string>
 							</object>
@@ -403,7 +347,26 @@
 					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/ShopItemCell.h</string>
+						<string key="minorKey">./Classes/ShopItemDetailPurchaseCell.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">ShopItemDetailViewController</string>
+					<string key="superclassName">UITableViewController</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">purchaseCell</string>
+						<string key="NS.object.0">ShopItemDetailPurchaseCell</string>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<string key="NS.key.0">purchaseCell</string>
+						<object class="IBToOneOutletInfo" key="NS.object.0">
+							<string key="name">purchaseCell</string>
+							<string key="candidateClassName">ShopItemDetailPurchaseCell</string>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/ShopItemDetailViewController.h</string>
 					</object>
 				</object>
 			</object>
