--- a/CandyStore/en.lproj/ShopListItemCell.xib
+++ b/CandyStore/en.lproj/ShopListItemCell.xib
@@ -38,23 +38,22 @@
 				<string key="IBProxiedObjectIdentifier">IBFirstResponder</string>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
-			<object class="IBUITableViewCell" id="515257821">
+			<object class="IBUITableViewCell" id="437841183">
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<object class="NSMutableArray" key="NSSubviews">
 					<bool key="EncodedWithXMLCoder">YES</bool>
-					<object class="IBUIView" id="574191273">
-						<reference key="NSNextResponder" ref="515257821"/>
+					<object class="IBUIView" id="170317915">
+						<reference key="NSNextResponder" ref="437841183"/>
 						<int key="NSvFlags">256</int>
 						<object class="NSMutableArray" key="NSSubviews">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<object class="IBUIImageView" id="677880189">
-								<reference key="NSNextResponder" ref="574191273"/>
+							<object class="IBUIImageView" id="934561892">
+								<reference key="NSNextResponder" ref="170317915"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{5, 5}, {56, 56}}</string>
-								<reference key="NSSuperview" ref="574191273"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="279222394"/>
+								<reference key="NSSuperview" ref="170317915"/>
+								<reference key="NSNextKeyView" ref="428764425"/>
 								<string key="NSReuseIdentifierKey">_NS:541</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -63,13 +62,12 @@
 									<string key="NSResourceName">shopPlaceholder.png</string>
 								</object>
 							</object>
-							<object class="IBUILabel" id="279222394">
-								<reference key="NSNextResponder" ref="574191273"/>
+							<object class="IBUILabel" id="428764425">
+								<reference key="NSNextResponder" ref="170317915"/>
 								<int key="NSvFlags">290</int>
 								<string key="NSFrame">{{69, 23}, {146, 21}}</string>
-								<reference key="NSSuperview" ref="574191273"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="257239202"/>
+								<reference key="NSSuperview" ref="170317915"/>
+								<reference key="NSNextKeyView" ref="644526245"/>
 								<string key="NSReuseIdentifierKey">_NS:311</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -95,12 +93,11 @@
 								<int key="IBUIBaselineAdjustment">1</int>
 								<float key="IBUIMinimumFontSize">10</float>
 							</object>
-							<object class="IBUILabel" id="257239202">
-								<reference key="NSNextResponder" ref="574191273"/>
+							<object class="IBUILabel" id="644526245">
+								<reference key="NSNextResponder" ref="170317915"/>
 								<int key="NSvFlags">289</int>
 								<string key="NSFrame">{{215, 23}, {65, 21}}</string>
-								<reference key="NSSuperview" ref="574191273"/>
-								<reference key="NSWindow"/>
+								<reference key="NSSuperview" ref="170317915"/>
 								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:311</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -130,9 +127,8 @@
 							</object>
 						</object>
 						<string key="NSFrameSize">{300, 66}</string>
-						<reference key="NSSuperview" ref="515257821"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="677880189"/>
+						<reference key="NSSuperview" ref="437841183"/>
+						<reference key="NSNextKeyView" ref="934561892"/>
 						<string key="NSReuseIdentifierKey">_NS:370</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -147,8 +143,7 @@
 				</object>
 				<string key="NSFrameSize">{320, 66}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="574191273"/>
+				<reference key="NSNextKeyView" ref="170317915"/>
 				<string key="NSReuseIdentifierKey">_NS:358</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -157,7 +152,7 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 				<int key="IBUISeparatorStyle">1</int>
 				<int key="IBUIAccessoryType">1</int>
-				<reference key="IBUIContentView" ref="574191273"/>
+				<reference key="IBUIContentView" ref="170317915"/>
 				<string key="IBUIReuseIdentifier">shopListItemCell</string>
 			</object>
 		</object>
@@ -167,34 +162,34 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">iconView</string>
-						<reference key="source" ref="515257821"/>
-						<reference key="destination" ref="677880189"/>
+						<reference key="source" ref="437841183"/>
+						<reference key="destination" ref="934561892"/>
 					</object>
-					<int key="connectionID">10</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">priceLabel</string>
-						<reference key="source" ref="515257821"/>
-						<reference key="destination" ref="257239202"/>
-					</object>
-					<int key="connectionID">11</int>
+					<int key="connectionID">7</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">titleLabel</string>
-						<reference key="source" ref="515257821"/>
-						<reference key="destination" ref="279222394"/>
+						<reference key="source" ref="437841183"/>
+						<reference key="destination" ref="428764425"/>
 					</object>
-					<int key="connectionID">12</int>
+					<int key="connectionID">8</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">priceLabel</string>
+						<reference key="source" ref="437841183"/>
+						<reference key="destination" ref="644526245"/>
+					</object>
+					<int key="connectionID">9</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">shopListItemCell</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="515257821"/>
+						<reference key="destination" ref="437841183"/>
 					</object>
-					<int key="connectionID">13</int>
+					<int key="connectionID">10</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -219,29 +214,29 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">3</int>
-						<reference key="object" ref="515257821"/>
+						<reference key="object" ref="437841183"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="279222394"/>
-							<reference ref="677880189"/>
-							<reference ref="257239202"/>
+							<reference ref="644526245"/>
+							<reference ref="934561892"/>
+							<reference ref="428764425"/>
 						</object>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
+						<int key="objectID">4</int>
+						<reference key="object" ref="644526245"/>
+						<reference key="parent" ref="437841183"/>
+					</object>
+					<object class="IBObjectRecord">
 						<int key="objectID">5</int>
-						<reference key="object" ref="257239202"/>
-						<reference key="parent" ref="515257821"/>
+						<reference key="object" ref="934561892"/>
+						<reference key="parent" ref="437841183"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">6</int>
-						<reference key="object" ref="279222394"/>
-						<reference key="parent" ref="515257821"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">7</int>
-						<reference key="object" ref="677880189"/>
-						<reference key="parent" ref="515257821"/>
+						<reference key="object" ref="428764425"/>
+						<reference key="parent" ref="437841183"/>
 					</object>
 				</object>
 			</object>
@@ -255,9 +250,9 @@
 					<string>-2.IBPluginDependency</string>
 					<string>3.CustomClassName</string>
 					<string>3.IBPluginDependency</string>
+					<string>4.IBPluginDependency</string>
 					<string>5.IBPluginDependency</string>
 					<string>6.IBPluginDependency</string>
-					<string>7.IBPluginDependency</string>
 				</object>
 				<object class="NSMutableArray" key="dict.values">
 					<bool key="EncodedWithXMLCoder">YES</bool>
@@ -284,87 +279,9 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">13</int>
+			<int key="maxID">10</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<bool key="EncodedWithXMLCoder">YES</bool>
-				<object class="IBPartialClassDescription">
-					<string key="className">CandyShopViewController</string>
-					<string key="superclassName">RefreshingTableViewController</string>
-					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">shopListItemCell</string>
-						<string key="NS.object.0">ShopListItemCell</string>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<string key="NS.key.0">shopListItemCell</string>
-						<object class="IBToOneOutletInfo" key="NS.object.0">
-							<string key="name">shopListItemCell</string>
-							<string key="candidateClassName">ShopListItemCell</string>
-						</object>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/CandyShopViewController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">RefreshingTableViewController</string>
-					<string key="superclassName">UITableViewController</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/RefreshingTableViewController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">ShopListItemCell</string>
-					<string key="superclassName">UITableViewCell</string>
-					<object class="NSMutableDictionary" key="outlets">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>iconView</string>
-							<string>priceLabel</string>
-							<string>titleLabel</string>
-						</object>
-						<object class="NSMutableArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>UIImageView</string>
-							<string>UILabel</string>
-							<string>UILabel</string>
-						</object>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>iconView</string>
-							<string>priceLabel</string>
-							<string>titleLabel</string>
-						</object>
-						<object class="NSMutableArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<object class="IBToOneOutletInfo">
-								<string key="name">iconView</string>
-								<string key="candidateClassName">UIImageView</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">priceLabel</string>
-								<string key="candidateClassName">UILabel</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">titleLabel</string>
-								<string key="candidateClassName">UILabel</string>
-							</object>
-						</object>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/ShopListItemCell.h</string>
-					</object>
-				</object>
-			</object>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDevelopmentDependencies">
